# Pong

./: .gitignore  CMakeLists.txt  README.md
Assets/Fonts/: NullTerminator_META.xml
Include/: application.hpp  asset_manager.hpp  defs.hpp  input.hpp  physics.hpp
Include/Common/: application.hpp  asset_manager.hpp  common.hpp  defs.hpp  game.hpp  input.hpp  logger.hpp  physics.hpp  platform_utils.hpp  renderer.hpp  structs.hpp  text.hpp
Include/windows/: Note.txt
lib/mac/: libSDL2-2.0.0.dylib  libtinyxml2.10.0.0.dylib
lib/windows/: SDL2.lib  SDL2_image.lib  SDL2_ttf.lib
src/: application.cpp  asset_manager.cpp  game.cpp  input.cpp  logger.cpp  main.cpp  physics.cpp  platform_utils.cpp  renderer.cpp  text.cpp
